# patent_scraper

./: .gitignore  README.md  cleanup_datalake.sh  create_datalake.sh  populate_datalake.sh  pyproject.toml
patent_scraper/src/: data_analyse.py  data_ingest.py  data_prepare.py  data_transform.py
