[tool.poetry]
name = "patent-scraper"
version = "0.1.0"
description = "A patent scraper"
authors = ["joe.fox <j.oefox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
